@@ -15,6 +15,8 @@ Revision history for DBIx::Class
           search_related from prefetching resultsets
         - Fix regression on all-null returning searches (properly switch
           LEFT JOIN to JOIN in order to distinguish between both cases)
+        - Fix regression in groupedresultset count() used on strict-mode
+          MySQL connections
         - Better isolation of RNO-limited queries from the rest of a
           prefetching resultset
         - New MSSQL specific resultset attribute to allow hacky ordered
